# Health-Legal-Dashboard

./: .gitignore  README.md  anvisa_lista.json  app.py  cmed_10anos_top30.csv  df_optimized.parquet  medicamento_mundial_cancer_anvisa.json  onc_conitec.json  only_anvisa_approved.jsonl  pmc_2015_2024.csv  pyproject.toml  testing.ipynb  transform.ipynb  unimed.csv
html_files/: Unimed_natal-dashboard-judicializacao_impacto_financeiro.html  Unimed_natal_dashboard-judicializacao.html  amil_rj_complementar.html  cnu_dashboard_medicamentos_ray.html  dashboard-complementar-medicamentos_tjac.html  dashboard-estrategia_PLANSERV.html  dashboard-financeiro-revisado-unimed_sul_mineira_estrategico.html  dashboard-financeiro-termos-juridicos-unimed-goiania.html  dashboard-simples-unimed-uberlandia.html  dashboard-simplificado_tjac.html  dashboard-tribunais-unimed-goiania.html  dashboard-unimed-sul-mineira.html  dashboard_amil_integrado.html  dashboard_consolidado_completo_belem.html  dashboard_estrategico_defensoria_v2.html  dashboard_estrategico_goias.html  dashboard_medicamentos_amil.html  dashboard_medicamentos_amostra_geral_crm.html  dashboard_medicamentos_aracaju.html  dashboard_medicamentos_limpo.html  dashboard_medicamentos_saude_caixa.html  dashboard_medicamentos_sjrp.html  dashboard_oncologia_goias.html  dashboard_risco_defensoria.html  dashboard_saude_goias.html  dashboard_tjam_comparado_estrategia.html  judicial_dashboard_recife_poc.html  medicamentos_dashboard_simulado_reciprev.html  meedi_dashboard_oab.html  meedi_dashboard_unimed_natal.html  meedi_dashboard_updated-1.html  (+18 more)
