[tool.poetry]
name = "mock-dash"
version = "0.1.0"
description = ""
authors = ["Etore-BeS <etorebraga@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
unidecode = "^1.3.8"
statsmodels = "^0.14.4"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
